--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-promise": "~3.5",
     "eslint-plugin-standard": "~3.0",
     "eslint-plugin-vue": "~5.1",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "~1.7",
     "html-webpack-plugin": "~3.2",
     "mini-css-extract-plugin": "~0.5",
