refactor styles & refactor components

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/polyfill": "~7.2",
     "axios": "^0.21.1",
+    "v-click-outside": "^3.1.2",
     "vue": "~2.6",
     "vue-router": "~3.0",
     "vuex": "^3.4.0"
