--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
-    "staging": "cross-env NODE_ENV=staging webpack"
+    "staging": "cross-env NODE_ENV=staging webpack",
+    "lint": "eslint --fix --ext .js,.jsx ."
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
@@ -21,12 +22,16 @@
     "@babel/plugin-proposal-class-properties": "~7.3",
     "@babel/plugin-proposal-decorators": "~7.3",
     "@babel/plugin-proposal-json-strings": "~7.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "~7.2",
     "@babel/plugin-syntax-import-meta": "~7.2",
     "@babel/preset-env": "~7.3",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "babel-eslint": "~10.0",
     "babel-loader": "~8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "compression-webpack-plugin": "~2.0",
     "cross-env": "~5.2",
     "css-loader": "~2.1",
@@ -34,7 +39,6 @@
     "eslint-config-standard": "~10.2",
     "eslint-friendly-formatter": "~3.0",
     "eslint-loader": "~2.1",
-    "eslint-plugin-html": "~3.0",
     "eslint-plugin-import": "~2.14",
     "eslint-plugin-node": "~4.2",
     "eslint-plugin-promise": "~3.5",
