--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "author": "Dmytro Puzyrenko <myaczt@gmail.com>",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "eslint --fix --ext .js,.jsx .",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
-    "staging": "cross-env NODE_ENV=staging webpack",
-    "lint": "eslint --fix --ext .js,.jsx ."
+    "staging": "cross-env NODE_ENV=staging webpack"
   },
   "dependencies": {
     "@babel/polyfill": "~7.2",
@@ -26,7 +27,9 @@
     "@babel/plugin-syntax-dynamic-import": "~7.2",
     "@babel/plugin-syntax-import-meta": "~7.2",
     "@babel/preset-env": "~7.3",
+    "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/test-utils": "^1.0.3",
     "babel-eslint": "~10.0",
     "babel-loader": "~8.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
@@ -45,6 +48,7 @@
     "eslint-plugin-standard": "~3.0",
     "eslint-plugin-vue": "~5.1",
     "file-loader": "^6.2.0",
+    "flush-promises": "^1.0.2",
     "friendly-errors-webpack-plugin": "~1.7",
     "html-webpack-plugin": "~3.2",
     "mini-css-extract-plugin": "~0.5",
