fix package commands

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "Dmytro Puzyrenko <myaczt@gmail.com>",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e:run": "cyperess run",
-    "test:e2e:open": "cyperess open",
+    "test:unit": "jest",
+    "test:e2e:run": "cypress run",
+    "test:e2e:open": "cypress open",
     "lint": "eslint --fix --ext .js,.jsx .",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress",
     "staging": "cross-env NODE_ENV=staging webpack"
